--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,11 +9,12 @@ html(lang='th-TH')
     meta(property="og:type", content="website")
     meta(property="og:title", content="Sponsor Proposal | Young Creator's Camp 2")
     meta(property="og:description", content="ร่วมสนับสนุนค่ายนักสร้างรุ่นเยาว์ Young Creator's Camp 2")
-    meta(property="og:image", content="../images/og-thumbnail.png")
+    //- meta(property="og:image", content="../images/og-thumbnail.png")
     meta(property="title", content="Sponsor Proposal | Young Creator's Camp 2")
     meta(property="description", content="ร่วมสนับสนุนค่ายนักสร้างรุ่นเยาว์ Young Creator's Camp 2")
-    meta(property="image", content="../images/og-thumbnail.png")
+    //- meta(property="image", content="../images/og-thumbnail.png")
 
+    link(rel="shortcut icon", href="../images/logo-1.png")
     link(rel='stylesheet', href='../styles/index.sass')
     link(href="https://fonts.googleapis.com/css?family=Sarabun&display=swap", rel="stylesheet")
 
