:sparkles: Add YCC logo

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -21,6 +21,7 @@ html(lang='th-TH')
     title Sponsor Proposal | Young Creator's Camp 2
   body
     main.container
+      img.hero-logo(src="../images/full-logo.png")
       .text-container
         include:markdown-it ../content/Proposal.md
     script(src='../scripts/index.ts')
