:sparkles: Font changes

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -48,3 +48,6 @@ table
   td, th
     padding: 6px 8px 10px 8px
     border-bottom: 1px solid #d6d6d6
+
+  td:not(:last-child), th:not(:last-child)
+    border-right: 1px solid #d6d6d6
