--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -16,7 +16,7 @@ html(lang='th-TH')
 
     link(rel="shortcut icon", href="../images/logo-1.png")
     link(rel='stylesheet', href='../styles/index.sass')
-    link(href="https://fonts.googleapis.com/css?family=Sarabun&display=swap", rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Nunito|Kanit|Prompt|Roboto|Sarabun&display=swap", rel="stylesheet")
 
     title Sponsor Proposal | Young Creator's Camp 2
   body
