--- a/src/styles/_fonts.sass
+++ b/src/styles/_fonts.sass
@@ -1,11 +1,11 @@
-$thai-heading-font: 'Sukhumvit Set'
+$thai-heading-font: 'Kanit'
 $thai-legible-font: 'Sarabun'
 
 $english-heading-font: 'Roboto'
 $english-legible-font: 'Roboto'
   
-$heading-font: $thai-heading-font, $english-heading-font
-$legible-font: $thai-legible-font, $english-legible-font
+$heading-font: $english-heading-font, $thai-heading-font
+$legible-font: $english-legible-font, $thai-legible-font
 
 $root-font-stack: $legible-font, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   
