:bug: Update og:url

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,7 +5,7 @@ html(lang='th-TH')
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
-    meta(property="og:url", content="https://sponsor.ycc.in.th")
+    meta(property="og:url", content="https://proposal.ycc.in.th")
     meta(property="og:type", content="website")
     meta(property="og:title", content="Sponsor Proposal | Young Creator's Camp 2")
     meta(property="og:description", content="ร่วมสนับสนุนค่ายนักสร้างรุ่นเยาว์ Young Creator's Camp 2")
