:memo: Alter page title

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,10 +7,10 @@ html(lang='th-TH')
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(property="og:url", content="https://proposal.ycc.in.th")
     meta(property="og:type", content="website")
-    meta(property="og:title", content="Sponsor Proposal | Young Creator's Camp 2")
+    meta(property="og:title", content="Sponsorship Proposal - Young Creator's Camp 2")
     meta(property="og:description", content="ร่วมสนับสนุนค่ายนักสร้างรุ่นเยาว์ Young Creator's Camp 2")
     //- meta(property="og:image", content="../images/og-thumbnail.png")
-    meta(property="title", content="Sponsor Proposal | Young Creator's Camp 2")
+    meta(property="title", content="Sponsorship Proposal - Young Creator's Camp 2")
     meta(property="description", content="ร่วมสนับสนุนค่ายนักสร้างรุ่นเยาว์ Young Creator's Camp 2")
     //- meta(property="image", content="../images/og-thumbnail.png")
 
@@ -18,7 +18,7 @@ html(lang='th-TH')
     link(rel='stylesheet', href='../styles/index.sass')
     link(href="https://fonts.googleapis.com/css?family=Nunito|Kanit|Prompt|Roboto|Sarabun&display=swap", rel="stylesheet")
 
-    title Sponsor Proposal | Young Creator's Camp 2
+    title Sponsorship Proposal - Young Creator's Camp 2
   body
     main.container
       img.hero-logo(src="../images/full-logo.png")
