fix: link icon from favicon.ico

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -14,7 +14,8 @@ html(lang='th-TH')
     meta(property="description", content="ร่วมสนับสนุนค่ายนักสร้างรุ่นเยาว์ Young Creator's Camp 2")
     meta(property="image", content="../images/backdrop.png")
 
-    link(rel="shortcut icon", href="../images/logo-1.png")
+    link(rel="shortcut icon", href="../../static/favicon.ico")
+    link(rel="apple-touch-icon-precomposed", href="../../static/favicon.ico")
     link(rel='stylesheet', href='../styles/index.sass')
     link(href="https://fonts.googleapis.com/css?family=Kanit|Roboto|Sarabun&display=swap", rel="stylesheet")
 
