:sparkles: Link to Official Proposal

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -21,8 +21,5 @@ html(lang='th-TH')
 
     title Sponsorship Proposal - Young Creator's Camp 2
   body
-    main.container
-      img.hero-logo(src="../images/full-logo.png")
-      .text-container
-        include:markdown-it ../content/Proposal.md
+    iframe.proposal-frame(src='https://proposal.ycc.in.th/proposal.pdf')
     script(src='../scripts/index.ts')
