--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -56,3 +56,9 @@ table
 
 .table-container
   overflow-y: hidden
+
+iframe.proposal-frame
+  width: 100%
+  height: 100%
+  border: none
+  min-height: 100vh
